--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@font-face {
-  font-family: "Montserrat";
-  src: url("../fonts/Montserrat-VariableFont_wght.ttf");
-}
-@font-face {
-  font-family: "Nunito";
-  src: url("../fonts/Nunito-VariableFont_wght.ttf");
-}
 :root {
   scroll-behavior: smooth;
-  font-family: Nunito;
+}
+body {
+  @apply font-nunito;
 }
